# experiment-dirty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
src/: CMakeLists.txt  dirty_benchmark.cpp
tasks/: __init__.py  build.py  run.py  util.py
